k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    #app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    #app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/yukihiro-azuma-express-sample-app.git
  labels:
    app: api-service-dev
    app.kubernetes.io/instance: api-service-dev
    app.kubernetes.io/name: api-service-dev
    app.openshift.io/runtime: js
  name: api-service-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: api-service-dev
      app.kubernetes.io/name: api-service-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: api-service-dev
        app.kubernetes.io/name: api-service-dev
    spec:
      containers:
        - env:
          - name: INGRESS_HOST
          - name: PROTOCOLS
          image: jp.icr.io/showcase/cloud-native-developer
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: api-service-dev
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
