k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-service-dev
    app.kubernetes.io/instance: api-service-dev
    app.kubernetes.io/name: api-service-dev
  name: api-service-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: api-service-dev
    app.kubernetes.io/name: api-service-dev
  sessionAffinity: None
  type: ClusterIP
